# rsf-analytics

./: .gitignore  README.md
demo/: get_data_csv.py  get_data_graph.py
site/: .dockerignore  Dockerfile  Makefile  Pipfile  api.py  config.py  crontab  example.env  get_data_graph.py  main.py  pyproject.toml
site/static/: app.css  index.html
site/templates/: index.html.j2
