[tool.poetry]
name = "rsf-analytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
apscheduler = "^3.10.4"
requests = "^2.31.0"
matplotlib = "^3.8.0"
hypercorn = "^0.14.4"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
